Implement POST for devices.
